2005-08-12  Jacob Smullyan  <smulloni@smullyan.org>

	* src/pydo/operators.py (SQLOperator._repr_single): peculiar
	thinko.
	(__repr_single_isnull): fix for ISNULL and NOTNULL, which were
	broken. 

2005-08-08  Jacob Smullyan  <smulloni@smullyan.org>

	* tests/test_dbi.py (test_pool2): test that pool gives different
	connections for different (active) threads.

2005-08-04  Jacob Smullyan  <smulloni@smullyan.org>

	* doc/manual.rst: document the new keyword argument of the
	project() method.

	* src/pydo/base.py (PyDO.project): accept keyword arguments
	(currently only "mutable").

	* tests/test_base.py (test_project9): test for projections that
	override mutability of base class.


2005-08-03  Hamish Lawson  <hbl@st-andrews.ac.uk>

	* src/pydo/drivers/oracleconn.py: Added listTables.
	
2005-08-01  Jacob Smullyan  <smulloni@smullyan.org>

	* doc/manual.rst: document ForeignKey, OneToMany, and ManyToMany. 

	* doc/examples/pim.py: updated to use ForeignKey and ManyToMany.

	* src/pydo/base.py (ManyToMany): utility for creating accessor
	methods for many-to-many joins.

	* tests/test_base.py (test_many_to_many1): test for ManyToMany.

	* tests/fixture.py (base_fixture): added new table ("F") for
	OneToMany and ForeignKey tests with multi-column keys.

	* tests/test_base.py (test_one_to_many1, test_one_to_many2): tests
	for OneToMany. (test_foreignkey2): test for ForeignKey with
	multi-column FK.

	* src/pydo/base.py (OneToMany): a utility for creating accessor
	methods for one-to-many associations.

2005-07-28  Jacob Smullyan  <smulloni@smullyan.org>

	* tests/test_base.py (test_foreignkey1) test of ForeignKey
	descriptor. 

	* src/pydo/base.py (ForeignKey): a descriptor that makes it easy
	to create foreign key properties.

2005-07-25  Jacob Smullyan  <smulloni@smullyan.org>

	* src/pydo/__init__.py (__version__): upping version for beta1.

	* tests/test_base.py (test_unique5): renamed test, which shared
	name with another.
