@@ -87,7 +87,11 @@ class SqliteDBI(DBIBase):
    def __init__(self, connectArgs, pool=None, verbose=False):
       if pool and not hasattr(pool, 'connect'):
          pool=ConnectionPool()
-      super(SqliteDBI, self).__init__(connectArgs, sqlite.connect, pool, verbose)
+      super(SqliteDBI, self).__init__(connectArgs,
+                                      sqlite.connect,
+                                      sqlite,
+                                      pool,
+                                      verbose)
    
    def getConverter(self):
       return SqliteConverter(self.paramstyle)
